--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   },
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -14,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "validator": "^13.7.0"
   }
 }
