--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,10 @@
+//JWT
+JWT=
+SALT=
+TZ=
+
 //MONGO
-MONGO_HOST= 
-MONGO_USER= 
-MONGO_PASS= 
-MONGO_DB = 
+MONGO_HOST=
+MONGO_USER=
+MONGO_PASS=
+MONGO_DB=
