--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -16,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.1",
     "validator": "^13.7.0"
   }
