--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
+    "mongoose-paginate-v2": "^1.4.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.1",
