--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@sentry/node": "^6.16.1",
+    "@sentry/tracing": "^6.16.1",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
