--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
     "faker": "^5.0.0",
-    "firebase": "^9.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "mongoose-paginate-v2": "^1.4.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.1",
+    "sharp": "^0.29.3",
     "validator": "^13.7.0"
   }
 }
